# AI_01_06

./: .dockerignore  .env.docker  .env.example  .gitignore  AGENTS.md  GUIDE.md  README.md  SYSTEM_DESIGN.md  compose.override.yaml  compose.prod.yaml  compose.yaml  docker-compose.yml  plan.md  pyproject.toml
ai_worker/: .dockerignore  Dockerfile  main.py  pyproject.toml
ai_worker/chat/: service.py  session.py
ai_worker/core/: config.py
ai_worker/guide/: service.py
ai_worker/llm/: client.py
ai_worker/llm/prompts/: base.py  chat.py  guide.py
ai_worker/schemas/: chat.py  guide.py
ai_worker/tests/: conftest.py  test_guide_service.py  test_purge_task.py  test_tasks.py
ai_worker/worker/: config.py  main.py
ai_worker/worker/tasks/: chat_task.py  guide_task.py  medication_check_task.py  ocr_task.py  purge_task.py
ai_worker/worker/tools/: weather_tool.py
app/: .dockerignore  Dockerfile  db.sqlite3-shm  db.sqlite3-wal  entrypoint.sh  main.py  pyproject.toml
app/apis/v1/: __init__.py  auth_routers.py  guide_routers.py  llm_routers.py  prescription_routers.py  social_routers.py  user_routers.py
app/app/: config.py  main.py  worker.py
app/app/api/: auth.py  caregivers.py  chat.py  google_auth.py  guides.py  kakao_auth.py  medications.py  notifications.py  prescriptions.py  schedules.py  users.py
app/app/core/: database.py  deps.py  rate_limit.py  redis.py  response.py  security.py
app/app/models/: audit.py  auth_provider.py  caregiver_patient.py  chat.py  drug_document.py  guide.py  notification.py  patient_profile.py  prescription.py  refresh_token.py  schedule.py  terms_consent.py  user.py
app/app/schemas/: auth.py  (+5 more)
app/core/: config.py  enums.py
app/data/: raw_drug_chunks.json
app/db/: Sullivan_Init.sql  databases.py
app/dependencies/: security.py
app/dtos/: __init__.py  audit.py  auth.py  base.py  caregiver.py  chat.py  guide.py  medication.py  notification.py  prescription.py  prescriptions.py  schedule.py  users.py
app/models/: __init__.py  audits.py  chats.py  guides.py  medicals.py  medications.py  notifications.py  ocr_jobs.py  prescriptions.py  users.py
app/repositories/: guide_repository.py  medical_repository.py  medication_repository.py  ocr_repository.py  prescription_repository.py  social_repository.py  user_repository.py
app/scripts/: build_faiss_index.py  collect_drug_data.py  debug_eayak_api.py  seed_drugs.py  test_retrieval_quality.py
app/services/: auth.py  ocr_service.py  prescription_service.py  users.py
app/tests/: conftest.py  test_audit.py  test_auth.py  test_auth_security.py  test_caregiver_invite.py  test_caregiver_mapping.py  test_chat.py  test_core_flow.py  test_google_auth.py  test_guardian_proxy.py  test_kakao_auth.py  test_medication_check.py  test_notification.py  test_notification_events.py  test_ocr_flow.py  test_ocr_service.py  test_patient_profile.py  test_rag.py  test_redis.py  test_schedule.py
app/utils/: file_storage.py  validators.py
(+145 files in other folders)
