[project]
name = "sullivan-worker"
version = "0.1.0"
description = "& Sullivan - AI Worker (OCR, LLM)"
requires-python = ">=3.13"
dependencies = [
    "arq>=0.26.0,<1.0",
    "redis>=5.0.0,<8.0",
    "tortoise-orm>=0.25.0,<2.0",
    "httpx>=0.27.0,<1.0",
    "openai>=1.60.0,<2.0",
    "aiomysql>=0.2.0,<1.0",
    "sullivan-backend",
]

[tool.uv.sources]
sullivan-backend = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["worker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "aiosqlite>=0.21.0",
    "ruff>=0.9.0",
]
